--- a/fonts/WonderType/WonderType.css
+++ b/fonts/WonderType/WonderType.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'wondertyperegular';
-    src: url('/wondertype-regular-webfont.woff2') format('woff2'),
-         url('/wondertype-regular-webfont.woff') format('woff');
+    src: url('./fonts/WonderType/wondertype-regular-webfont.woff2') format('woff2'),
+         url('./fonts/WonderType/wondertype-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
