Add grid containers

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 @media screen and (max-width: 700px) {
-  .flower {
+  .flower, .pr {
     display: none;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
   }
 }
 /* general */
