--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,39 @@
   .pr {
     display: none;
   }
+  .about-bg {
+    overflow-y: auto;
+  }
   .container {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
   }
-  .box {
+  .aboutpage {
+    grid-template-rows: 20% 1fr 10%;
+    grid-template-columns: 70% 1fr;
+    row-gap: 20px;
+  }
+  .aboutpage > .name-box {
+    grid-area: 1/1/2/2;
+  }
+  .aboutpage > .work-box {
+    grid-area: 1/2/2/3;
+  }
+  .aboutpage > .text-box {
+    grid-area: 2/1/3/3;
+    padding: 50px 30px 25px;
+  }
+  .aboutpage > .about-box {
+    grid-area: 3/1/4/2;
+  }
+  .aboutpage > .socials-box {
+    grid-area: 3/2/4/3;
+  }
+  .container > * {
     position: relative;
+    top: auto;
+    bottom: auto;
+    left: auto;
+    right: auto;
   }
 }
 /* general */
@@ -28,7 +54,10 @@ html {
 img {
   pointer-events: none;
 }
-
+.container {
+  width: 100vw;
+  height: 100vh;
+}
 a,
 a:visited,
 a:hover,
@@ -89,29 +118,6 @@ body {
     "𖧷 ⛆ 0"
     "𓂀 𓂀 𓂀";
 }
-.work-box {
-  top: 30px;
-  right: 30px;
-}
-.about-box {
-  bottom: 30px;
-  left: 30px;
-}
-.socials-box {
-  bottom: 45px;
-  right: 30px;
-}
-.text-box {
-  font-size: 30px;
-  top: 200px;
-  right: 30px;
-  max-width: 700px;
-  display: grid;
-  grid-template-rows: repeat(4, auto);
-  grid-template-columns: 1fr;
-  gap: 50px;
-}
-
 h1 {
   font-family: "wondertyperegular";
   font-size: 48px;
@@ -130,6 +136,41 @@ h1 {
   max-width: 340px;
   grid-area: 𓂀;
   font-size: 20px;
+}
+
+.work-box {
+  top: 30px;
+  right: 30px;
+}
+.about-box {
+  bottom: 30px;
+  left: 30px;
+}
+.socials-box {
+  bottom: 45px;
+  right: 30px;
+}
+.text-box {
+  font-size: 30px;
+  top: 200px;
+  right: 30px;
+  max-width: 700px;
+  display: grid;
+  grid-template-rows: repeat(5, auto);
+  grid-template-columns: 1fr;
+  row-gap: 30px;
+}
+.mail {
+  grid-area: 2/1/3/2;
+}
+.exp {
+  grid-area: 3/1/4/2;
+}
+.edu {
+  grid-area: 4/1/5/2;
+}
+.place {
+  grid-area: 5/1/6/2;
 }
 
 /* work and about clicks */
