--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
   .aboutpage > .text-box {
     grid-area: 2/1/3/3;
     padding: 50px 30px 25px;
+    font-size: 25px;
   }
   .aboutpage > .about-box {
     grid-area: 3/1/4/2;
@@ -68,9 +69,11 @@ a:active {
 
 .home-bg {
   background-image: url(../images/home/bg.png);
+  overflow: hidden;
 }
 .about-bg {
   background-image: url(../images/about/bg.png);
+  overflow: hidden;
 }
 body {
   position: relative;
@@ -80,7 +83,6 @@ body {
   width: 100vw;
   color: #000;
   font-family: "authentic_sanscondensed_90", sans-serif;
-  overflow: hidden;
 }
 
 /* images */
@@ -147,7 +149,7 @@ h1 {
   left: 30px;
 }
 .socials-box {
-  bottom: 45px;
+  bottom: 43px;
   right: 30px;
 }
 .text-box {
