--- a/css/styles.css
+++ b/css/styles.css
@@ -168,11 +168,11 @@ h1 {
   grid-area: 5/1/6/2;
 }
 
-.work-box {
+/* .work-box {
   position: absolute;
   top: 30px;
   right: 30px;
-}
+} */
 .work-click {
   border: #000 solid 2px;
   border-radius: 100%;
