--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body {
 
 .box {
   position: fixed;
-  z-index: 10;
+  z-index: 5;
 }
 .name-box {
   top: 20px;
@@ -172,6 +172,7 @@ h1 {
   position: absolute;
   top: 30px;
   right: 30px;
+  text-shadow: 10px #dcd6d7;
   z-index: 10;
 }
 .work-click {
@@ -181,7 +182,7 @@ h1 {
   transition: all 1s ease-in;
 }
 .hovered {
-  color: #dcd6d7 !important;
+  color: #fff !important;
   border-color: #111bff !important;
   background-color: #111bff !important;
   transform: rotateY(360deg) !important;
