--- a/css/styles.css
+++ b/css/styles.css
@@ -176,15 +176,17 @@ h1 {
   z-index: 10;
 }
 .work-click {
-  border: #000 solid 2px;
+  border: #111bff solid 2px;
+  background-color: #111bff;
+  color: #fff;
   border-radius: 100%;
   padding: 0 30px 5px;
   transition: all 1s ease-in;
 }
 .hovered {
-  color: #fff !important;
-  border-color: #111bff !important;
-  background-color: #111bff !important;
+  /* color: #fff !important; */
+  /* border-color: #111bff !important; */
+  /* background-color: #111bff !important; */
   transform: rotateY(360deg) !important;
 }
 
