--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 810px) {
+  .cursor,
   .flower,
   .pr {
     display: none;
@@ -44,13 +45,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 html {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  cursor: none;
 }
-
 img {
   pointer-events: none;
 }
@@ -65,7 +65,6 @@ a:active {
   color: #111bff;
   text-decoration: none;
 }
-
 .home-bg {
   background-image: url(../images/home/bg.png);
   overflow: hidden;
@@ -82,6 +81,18 @@ body {
   width: 100vw;
   color: #000;
   font-family: "authentic_sanscondensed_90", sans-serif;
+}
+
+/* cursor */
+.cursor {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 0 50% 50% 50%;
+  box-shadow: 5px 5px 5px #fff;
+  background-color: #111bff;
+  opacity: 75%;
+  z-index: 5;
 }
 
 /* images */
@@ -108,7 +119,7 @@ body {
 
 .box {
   position: fixed;
-  z-index: 5;
+  z-index: 6;
 }
 .name-box {
   top: 20px;
@@ -175,7 +186,7 @@ h1 {
   top: 30px;
   right: 30px;
   text-shadow: 10px #dcd6d7;
-  z-index: 10;
+  z-index: 7;
 }
 .work-click {
   border: #111bff solid 2px;
@@ -184,7 +195,6 @@ h1 {
   border-radius: 100%;
   padding: 0 30px 5px;
 }
-
 
 /* work and about clicks */
 .click {
