--- a/css/styles.css
+++ b/css/styles.css
@@ -4,38 +4,16 @@
   .pr {
     display: none;
   }
-  .about-bg {
-    overflow-y: auto;
-    height: 100%;
+  .first,
+  .last {
+    font-size: 30px;
   }
-  .container {
-    display: grid;
-  }
-  .aboutpage {
-    grid-template-rows: 20% 1fr 10%;
-    grid-template-columns: 70% 1fr;
-    row-gap: 20px;
-  }
-  .aboutpage > .name-box {
-    grid-area: 1/1/2/2;
+  .smol {
+    width: 35px !important;
   }
   .aboutpage > .text-box {
-    grid-area: 2/1/3/3;
-    padding: 50px 30px 25px;
-    font-size: 25px;
-  }
-  .aboutpage > .about-box {
-    grid-area: 3/1/4/2;
-  }
-  .aboutpage > .socials-box {
-    grid-area: 3/2/4/3;
-  }
-  .container > * {
-    position: relative;
-    top: auto;
-    bottom: auto;
-    left: auto;
-    right: auto;
+    margin: 50px 30px 25px;
+    font-size: 20px;
   }
 }
 
@@ -67,13 +45,12 @@ a:active {
 }
 .home-bg {
   background-image: url(../images/home/bg.png);
-  overflow: hidden;
 }
 .about-bg {
   background-image: url(../images/about/bg.png);
-  overflow: hidden;
 }
 body {
+  overflow: hidden;
   position: relative;
   background-size: cover;
   background-position: 0;
@@ -117,6 +94,7 @@ body {
   height: 100vh;
 }
 
+/* boxes and their content */
 .box {
   position: fixed;
   z-index: 6;
@@ -148,39 +126,43 @@ h1 {
   max-width: 340px;
   grid-area: 𓂀;
   font-size: 20px;
+  margin-top: 10px;
 }
 
-.about-box {
-  bottom: 30px;
-  left: 30px;
-}
-.socials-box {
-  bottom: 43px;
-  right: 30px;
-}
 .text-box {
   font-size: 30px;
   top: 200px;
   right: 30px;
   max-width: 700px;
   display: grid;
-  grid-template-rows: repeat(5, auto);
+  grid-template-rows: repeat(4, auto);
   grid-template-columns: 1fr;
   row-gap: 30px;
 }
 .mail {
-  grid-area: 2/1/3/2;
+  grid-area: 1/1/2/2;
 }
 .exp {
-  grid-area: 3/1/4/2;
+  grid-area: 2/1/3/2;
 }
 .edu {
-  grid-area: 4/1/5/2;
+  grid-area: 3/1/4/2;
 }
 .place {
-  grid-area: 5/1/6/2;
+  grid-area: 4/1/5/2;
 }
 
+.about-box {
+  bottom: 30px;
+  left: 30px;
+}
+
+.socials-box {
+  bottom: 43px;
+  right: 30px;
+}
+
+/* work and about clicks */
 .work-box {
   position: absolute;
   top: 30px;
@@ -195,13 +177,10 @@ h1 {
   border-radius: 100%;
   padding: 0 30px 5px;
 }
-
-/* work and about clicks */
 .click {
   color: #000;
   font-size: 36px;
 }
-
 .about-click {
   transition: color 0.25s;
 }
