--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
   .aboutpage > .text-box {
     margin: 50px 30px 25px;
     font-size: 20px;
+    row-gap: 20px;
   }
   em {
     font-size: 30px;
