--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ html {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
   cursor: none;
+  animation: pop 1s ease-in;
 }
 img {
   pointer-events: none;
@@ -64,8 +65,8 @@ body {
   position: relative;
   background-size: cover;
   background-position: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   color: #000;
   font-family: "authentic_sanscondensed_90", sans-serif;
 }
@@ -213,4 +214,13 @@ i:hover {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+@keyframes pop {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
