--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
     background-image: url(../images/home/bg-small.png);
   }
   .about-bg {
-    background-image: url(../images/about/bg-small.png);
+    background-image: url(../images/about/bg-small.png) !important;
   }
   .cursor,
   .flower,
