--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ h1 {
   background-color: #111bff;
   color: #fff !important;
   border-radius: 100%;
-  padding: 0 30px 2.75px;
+  padding: 0 30px;
 }
 .click {
   color: #000;
