--- a/css/styles.css
+++ b/css/styles.css
@@ -18,12 +18,13 @@
     width: 35px !important;
   }
   .aboutpage > .text-box {
-    margin: 50px 30px 25px;
-    font-size: 20px;
-    row-gap: 20px;
+    margin: 50px 30px 0;
+    row-gap: 15px;
+    font-size: 25px;
+    height: calc(100vh - 60%);
   }
   em, .click {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
 
