--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,30 @@
     margin: 50px 30px 0;
     row-gap: 20px;
     font-size: 25px;
-    height: calc(100vh - 60%);
+    /* height: calc(100vh - 60%); */
   }
-  em, .click {
+  em,
+  .click {
     font-size: 25px;
+  }
+}
+@media screen and (max-height: 690px) {
+  .first,
+  .last {
+    font-size: 25px;
+  }
+  .smol {
+    width: 30px !important;
+  }
+  .aboutpage > .text-box {
+    font-size: 20px;
+    margin-top: 15px;
+  }
+  .whoareyou {
+    font-size: 15px !important;
+  }
+  .socials-box {
+    bottom: 39px !important;
   }
 }
 
