--- a/css/styles.css
+++ b/css/styles.css
@@ -43,15 +43,20 @@ body {
 }
 
 /* cursor */
-.cursor {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-radius: 0 50% 50% 50%;
-  box-shadow: 5px 5px 5px 5px #fff;
-  background-color: #111bff;
-  opacity: 75%;
-  z-index: 5;
+.circle {
+  pointer-events: none;
+  fill: rgb(120, 187, 239);
+  position: fixed;
+  top: -50;
+  left: -50;
+  mix-blend-mode: difference;
+  z-index: 150;
+}
+
+.big {
+  transition-duration: 300ms;
+  transition-timing-function: ease-out;
+  transform: translate(-50%, -50%);
 }
 
 /* images */
