--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* general */
+/* GENERAL */
 * {
   margin: 0;
   padding: 0;
@@ -42,13 +42,13 @@ body {
   font-family: "authentic_sanscondensed_90", sans-serif;
 }
 
-/* cursor */
+/* CURSOR */
 .circle {
   pointer-events: none;
   fill: rgb(120, 187, 239);
   position: fixed;
-  top: -50;
-  left: -50;
+  top: -50px;
+  left: -50px;
   mix-blend-mode: difference;
   z-index: 150;
 }
@@ -59,14 +59,26 @@ body {
   transform: translate(-50%, -50%);
 }
 
-/* images */
+/* IMAGES */
 .png {
   position: absolute;
   z-index: 2;
 }
+/* HOME IMAGE */
+.shade {
+  left: 37%;
+  bottom: 16%;
+  width: 600px;
+}
 .flower {
-  left: 10%;
+  left: 35%;
+  bottom: 20%;
+  width: 500px;
+}
+.stars {
+  bottom: 0;
   height: 100vh;
+  width: 100vw;
 }
 .shape {
   width: 350px;
@@ -77,11 +89,12 @@ body {
 .right {
   right: 0;
 }
+/* ABOUT IMAGE */
 .pr {
   height: 100vh;
 }
 
-/* boxes and their content */
+/* BOX LAYOUT */
 .box {
   position: fixed;
   z-index: 6;
@@ -95,6 +108,26 @@ body {
     "𖧷 ⛆ 0"
     "𓂀 𓂀 𓂀";
 }
+.about-box {
+  bottom: 30px;
+  left: 30px;
+}
+.socials-box {
+  bottom: 43px;
+  right: 30px;
+}
+.text-box {
+  font-size: 30px;
+  top: 200px;
+  right: 30px;
+  max-width: 700px;
+  display: grid;
+  grid-template-rows: repeat(4, auto);
+  grid-template-columns: 1fr;
+  row-gap: 30px;
+}
+
+/* HEADING */
 h1 {
   font-family: "wondertyperegular";
   font-size: 48px;
@@ -116,16 +149,7 @@ h1 {
   margin-top: 10px;
 }
 
-.text-box {
-  font-size: 30px;
-  top: 200px;
-  right: 30px;
-  max-width: 700px;
-  display: grid;
-  grid-template-rows: repeat(4, auto);
-  grid-template-columns: 1fr;
-  row-gap: 30px;
-}
+/* ABOUT TEXT */
 .mail {
   grid-area: 1/1/2/2;
 }
@@ -139,43 +163,25 @@ h1 {
   grid-area: 4/1/5/2;
 }
 
-.about-box {
-  bottom: 30px;
-  left: 30px;
-}
-
-.socials-box {
-  bottom: 43px;
-  right: 30px;
-}
-
-/* work and about anchors */
-.click {
+/* ABOUT ANCHOR */
+.about-click {
   color: #000;
   font-size: 36px;
-}
-.about-click {
   transition: color 0.25s;
 }
 .about-click:hover {
   color: #111bff;
 }
+
+/* WORK SVG ANCHOR */
 .work-box {
-  position: absolute;
+  position: fixed;
   top: 30px;
   right: 30px;
-  text-shadow: 10px #dcd6d7;
   z-index: 7;
 }
-.work-click {
-  border: #111bff solid 2px;
-  background-color: #111bff;
-  color: #fff;
-  border-radius: 100%;
-  padding: 0 30px;
-}
 
-/* icons */
+/* ICONS */
 i {
   color: #000;
   transition: 0.25s;
@@ -184,14 +190,20 @@ i:hover {
   color: #111bff;
 }
 
-/* for ripples */
+/* NECESSARY FOR RIPPLES */
 .error {
   display: none;
   position: fixed;
   bottom: 0;
   left: 0;
 }
-@media screen and (max-width: 810px) {
+
+@media screen and (max-width: 1300px) {
+}
+@media screen and (max-width: 820px) {
+  #mouse {
+    visibility: hidden;
+  }
   .home-bg {
     background-image: url(../images/home/bg-small.png);
   }
@@ -239,6 +251,12 @@ i:hover {
   .socials-box {
     bottom: 39px;
   }
+}
+@media screen and (max-width: 580px) {
+}
+@media screen and (max-width: 400px) {
+}
+@media screen and (max-width: 300px) {
 }
 @keyframes pop {
   from {
