--- a/css/styles.css
+++ b/css/styles.css
@@ -198,44 +198,6 @@ i:hover {
   left: 0;
 }
 
-@media screen and (max-width: 1300px) {
-  .shade {
-    
-  }
-}
-@media screen and (max-width: 820px) {
-  #mouse {
-    visibility: hidden;
-  }
-  .home-bg {
-    background-image: url(../images/home/bg-small.png);
-  }
-  .about-bg {
-    background-image: url(../images/about/bg-small.png);
-  }
-  .cursor,
-  .flower,
-  .pr {
-    display: none;
-  }
-  .first,
-  .last {
-    font-size: 30px;
-  }
-  .smol {
-    width: 35px;
-  }
-  .aboutpage > .text-box {
-    margin: 50px 30px 0;
-    row-gap: 20px;
-    font-size: 25px;
-    /* height: calc(100vh - 60%); */
-  }
-  em,
-  .click {
-    font-size: 25px;
-  }
-}
 @media screen and (max-height: 690px) {
   .first,
   .last {
@@ -255,6 +217,57 @@ i:hover {
     bottom: 39px;
   }
 }
+@media screen and (max-width: 1300px) {
+  .shade {
+    left: 26%;
+    width: 500px;
+  }
+  .flower {
+    left: 24%;
+    width: 400px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .shade {
+    left: 22%;
+    bottom: 26%;
+    width: 70%;
+  }
+  .flower {
+    left: 18%;
+    bottom: 30%;
+    width: 60%;
+  }
+  #mouse {
+    visibility: hidden;
+  }
+  .home-bg {
+    background-image: url(../images/home/bg-small.png);
+  }
+  .about-bg {
+    background-image: url(../images/about/bg-small.png);
+  }
+  .pr {
+    opacity: 15%;
+  }
+  .first,
+  .last {
+    font-size: 30px;
+  }
+  .smol {
+    width: 35px;
+  }
+  .aboutpage > .text-box {
+    margin: 50px 30px 0;
+    row-gap: 20px;
+    font-size: 25px;
+    /* height: calc(100vh - 60%); */
+  }
+  em,
+  .click {
+    font-size: 25px;
+  }
+}
 @media screen and (max-width: 580px) {
 }
 @media screen and (max-width: 400px) {
@@ -267,5 +280,13 @@ i:hover {
   }
   to {
     opacity: 100%;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 100%;
+  }
+  to {
+    opacity: 0%;
   }
 }
