--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ html {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-  cursor: none;
   animation: pop 1s ease-in;
 }
 img {
@@ -40,23 +39,6 @@ body {
   width: 100%;
   color: #000;
   font-family: "authentic_sanscondensed_90", sans-serif;
-}
-
-/* CURSOR */
-.circle {
-  pointer-events: none;
-  fill: rgb(120, 187, 239);
-  position: fixed;
-  top: -50px;
-  left: -50px;
-  mix-blend-mode: difference;
-  z-index: 150;
-}
-
-.big {
-  transition-duration: 300ms;
-  transition-timing-function: ease-out;
-  transform: translate(-50%, -50%);
 }
 
 /* IMAGES */
@@ -180,6 +162,9 @@ h1 {
   right: 30px;
   z-index: 7;
 }
+.work-click:hover {
+  fill: #111bff;
+}
 
 /* ICONS */
 i {
@@ -240,9 +225,6 @@ i:hover {
   }
   .stars {
     width: fit-content;
-  }
-  #mouse {
-    visibility: hidden;
   }
   .home-bg {
     background-image: url(../images/home/bg-small.png);
